<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />

        <variable
            name="homeViewModel"
            type="com.deepak.clay.view.HomeViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/doors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doors"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintVertical_bias="0.08" />

        <Button
            android:id="@+id/signout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/doors"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.079"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/doors" />

        <Button
            android:id="@+id/configure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configure"
            android:visibility="@{homeViewModel.configureVisibility ? View.VISIBLE : View.GONE}"
            app:layout_constraintTop_toBottomOf="@+id/doors"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintVertical_bias="0.3" />

        <Button
            android:id="@+id/accesslogs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/access_logs"
            android:visibility="@{homeViewModel.accessLogs ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signout"
            app:layout_constraintLeft_toLeftOf="@+id/signout"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintRight_toRightOf="@+id/signout" />

    </android.support.constraint.ConstraintLayout>
</layout>