<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginViewModel"
            type="com.deepak.clay.view.login.LoginViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundLogin"
        tools:context="com.deepak.clay.view.login.LoginActivity">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="Welcome to Clay"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.08" />

        <EditText
            android:id="@+id/username"
            android:layout_width="180dp"
            android:layout_height="41dp"
            android:layout_marginTop="48dp"
            android:afterTextChanged="@{editable -> loginViewModel.getusertext(editable)}"
            android:hint="@string/user_name"
            android:text="@={loginViewModel.userName}"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorHint"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <EditText
            android:id="@+id/password"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:afterTextChanged="@{editable -> loginViewModel.getpasswordtext(editable)}"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text="@={loginViewModel.password}"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorHint"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <Button
            android:id="@+id/loginbtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorButtonBgColor"
            android:clickable="@{loginViewModel.loginButtonEnabled}"
            android:enabled="@{loginViewModel.loginButtonEnabled}"
            android:text="@string/login"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintVertical_bias="0.2" />

    </android.support.constraint.ConstraintLayout>
</layout>
